2011-12-06  Sam Weinig  <sam@webkit.org>

        Remove unintentional type name shadowing in the Interpreter
        https://bugs.webkit.org/show_bug.cgi?id=73963

        Reviewed by Oliver Hunt.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::prepareForRepeatCall): Replace the parameter name FunctionExecutable,
        which shadows the FunctionExecutable type name, with functionExecutable.

2011-12-06  Michael Saboff  <msaboff@apple.com>

        r102146 from 73875 broke fast/js/encode-URI-test.html
        https://bugs.webkit.org/show_bug.cgi?id=73950

        Reviewed by Gavin Barraclough.

        * runtime/JSGlobalObjectFunctions.cpp:
        (JSC::globalFuncUnescape): Restructured to handle
        the %uHHHH case to output the resulting character
        and continue so that a failure in finding 4 hex
        digits will fall through and output the '%'.
        Due to style check, changed the temporary
        character variable to a more descriptive name.

2011-12-06  Filip Pizlo  <fpizlo@apple.com>

        GC zapping logic could benefit from some more assertions
        https://bugs.webkit.org/show_bug.cgi?id=73947

        Reviewed by Gavin Barraclough.
        
        - If you're in a zapped block and you're zapped, then your mark bit should
          never be set.
          
        - If you're being marked, then you should never be zapped.

        * heap/MarkedBlock.h:
        (JSC::MarkedBlock::isLive):
        * runtime/Structure.h:
        (JSC::MarkStack::internalAppend):

2011-12-06  Oliver Hunt  <oliver@apple.com>

        Don't allocate register in typedarray control flow
        https://bugs.webkit.org/show_bug.cgi?id=73944

        Reviewed by Gavin Barraclough.

        Move a temporary allocation outside of control flow.

        * dfg/DFGSpeculativeJIT.cpp:
        (JSC::DFG::SpeculativeJIT::compileGetByValOnFloatTypedArray):

2011-12-06  Gavin Barraclough  <barraclough@apple.com>
